Aligned elements and fixed paddings

--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -23,7 +23,10 @@
 .what-we-do__offerings-wrapper {
   padding: 0 6rem;
 
-  .page__intro {max-width: 100%}
+  .page__intro {
+    max-width: 100%;
+    padding-top: 116px;
+  }
 }
 
 .what-we-do__discipline-inner {
@@ -72,6 +75,10 @@
   }
 }
 
+.what-we-do__offerings {
+  padding: 0 0 10em 0;
+}
+
 .what-we-do__offerings-row {
   padding: 8em 0;
 }
@@ -86,6 +93,16 @@
     width: 70%;
     padding-top: 70%;
     border-color: #979797;
+  }
+}
+
+.what-we-do__disciplines{
+  div[data-name="insights"] {
+    padding-top: 75px;
+  }
+
+  div[data-name="quality-assurance"] {
+    padding-bottom: 75px;
   }
 }
 
